# sslgem

./: CMakeLists.txt  Gemfile  README.md  build_gem  build_gem.sh  build_rubyssl.sh  build_ssl.sh  sslgem.gemspec
doc/: doc.txt
ext/ssl/: CMakeLists.txt  Makefile
ext/ssl/openssl_src/: CMakeLists.txt  Makefile  Makefile.bak  Makefile.org  build_openssl.sh
ext/ssl/openssl_src/apps/: Makefile
ext/ssl/openssl_src/crypto/: opensslconf.h
ext/ssl/openssl_src/tools/: c_rehash  c_rehash.in
gem/: sslgem.gemspec
gem/ext/ssl/: CMakeLists.txt  Makefile  build_ssl.sh  build_sslext.sh  extconf.rb
gem/ext/ssl/openssl_src/: Makefile
gem/ext/ssl/openssl_src/crypto/: opensslconf.h
gem/ext/ssl/openssl_src/tools/: c_rehash
gem/ext/ssl/sslext_src/: CMakeLists.txt  extconf.rb  main.cpp  sslext.cpp
gem/lib/: sslgem.rb  sslgemtest.rb
lib/: sslgem.rb
lib/test/: response
openssl_src/: .gitignore  CMakeLists.txt  Makefile
openssl_src/apps/: Makefile
openssl_src/crypto/: opensslconf.h
openssl_src/tools/: c_rehash
rubyssl_src/: CMakeLists.txt  main.c  main.cpp
sslgem/: sslgem.gemspec
sslgem/lib/: sslgem.rb
